test/corpus/bare_definition.txt
================================================================================
Bare definition for LDIF injection
================================================================================
( 1.2.3.4
    NAME 'inlineAttr'
    DESC 'Used in LDIF olcAttributeTypes'
    SYNTAX 1.3.6.1.4.1.1466.115.121.1.15 )

--------------------------------------------------------------------------------

(source_file
  (definition
    (oid)
    (clause
      (name_clause
        (keyword)
        (qdstring)))
    (clause
      (desc_clause
        (keyword)
        (qdstring)))
    (clause
      (syntax_clause
        (keyword)
        (syntax_spec
          (oid))))))
