test/corpus/clauses.txt
================================================================================
attributetype with SYNTAX length constraint
================================================================================
attributeType ( 1.2.3.4
    NAME 'shortName'
    SYNTAX 1.3.6.1.4.1.1466.115.121.1.15{32} )

--------------------------------------------------------------------------------

(source_file
  (attributetype_definition
    (keyword)
    (definition
      (oid)
      (clause
        (name_clause
          (keyword)
          (qdstring)))
      (clause
        (syntax_clause
          (keyword)
          (syntax_spec
            (oid)
            (number)))))))

================================================================================
attributetype with SINGLE-VALUE
================================================================================
attributeType ( 1.2.3.5
    NAME 'uniqueId'
    SYNTAX 1.3.6.1.4.1.1466.115.121.1.15
    SINGLE-VALUE )

--------------------------------------------------------------------------------

(source_file
  (attributetype_definition
    (keyword)
    (definition
      (oid)
      (clause
        (name_clause
          (keyword)
          (qdstring)))
      (clause
        (syntax_clause
          (keyword)
          (syntax_spec
            (oid))))
      (clause
        (single_value_clause
          (keyword))))))

================================================================================
attributetype with COLLECTIVE
================================================================================
attributeType ( 1.2.3.6
    NAME 'sharedAttr'
    SUP name
    COLLECTIVE )

--------------------------------------------------------------------------------

(source_file
  (attributetype_definition
    (keyword)
    (definition
      (oid)
      (clause
        (name_clause
          (keyword)
          (qdstring)))
      (clause
        (sup_clause
          (keyword)
          (oid_list
            (oid_item
              (oid_reference
                (bare_word))))))
      (clause
        (collective_clause
          (keyword))))))

================================================================================
attributetype with NO-USER-MODIFICATION and USAGE
================================================================================
attributeType ( 1.2.3.7
    NAME 'internalAttr'
    SYNTAX 1.3.6.1.4.1.1466.115.121.1.27
    NO-USER-MODIFICATION
    USAGE directoryOperation )

--------------------------------------------------------------------------------

(source_file
  (attributetype_definition
    (keyword)
    (definition
      (oid)
      (clause
        (name_clause
          (keyword)
          (qdstring)))
      (clause
        (syntax_clause
          (keyword)
          (syntax_spec
            (oid))))
      (clause
        (no_user_modification_clause
          (keyword)))
      (clause
        (usage_clause
          (keyword)
          (usage_kind
            (keyword)))))))

================================================================================
attributetype with EQUALITY ORDERING SUBSTR
================================================================================
attributeType ( 1.2.3.8
    NAME 'searchableAttr'
    EQUALITY caseIgnoreMatch
    ORDERING caseIgnoreOrderingMatch
    SUBSTR caseIgnoreSubstringsMatch
    SYNTAX 1.3.6.1.4.1.1466.115.121.1.15 )

--------------------------------------------------------------------------------

(source_file
  (attributetype_definition
    (keyword)
    (definition
      (oid)
      (clause
        (name_clause
          (keyword)
          (qdstring)))
      (clause
        (equality_clause
          (keyword)
          (oid_reference
            (bare_word))))
      (clause
        (ordering_clause
          (keyword)
          (oid_reference
            (bare_word))))
      (clause
        (substr_clause
          (keyword)
          (oid_reference
            (bare_word))))
      (clause
        (syntax_clause
          (keyword)
          (syntax_spec
            (oid)))))))

================================================================================
objectclass with OBSOLETE
================================================================================
objectClass ( 1.2.3.9
    NAME 'legacyClass'
    OBSOLETE
    SUP top STRUCTURAL
    MUST cn )

--------------------------------------------------------------------------------

(source_file
  (objectclass_definition
    (keyword)
    (definition
      (oid)
      (clause
        (name_clause
          (keyword)
          (qdstring)))
      (clause
        (obsolete_clause
          (keyword)))
      (clause
        (sup_clause
          (keyword)
          (oid_list
            (oid_item
              (oid_reference
                (bare_word))))))
      (clause
        (kind_clause
          (keyword)))
      (clause
        (must_clause
          (keyword)
          (oid_list
            (oid_item
              (oid_reference
                (bare_word)))))))))

================================================================================
Multiple X-extensions
================================================================================
attributeType ( 1.2.3.10
    NAME 'extendedAttr'
    SYNTAX 1.3.6.1.4.1.1466.115.121.1.15
    X-ORIGIN 'RFC 9999'
    X-SCHEMA-FILE 'custom.schema' )

--------------------------------------------------------------------------------

(source_file
  (attributetype_definition
    (keyword)
    (definition
      (oid)
      (clause
        (name_clause
          (keyword)
          (qdstring)))
      (clause
        (syntax_clause
          (keyword)
          (syntax_spec
            (oid))))
      (clause
        (x_clause
          (x_tag)
          (qdstring)))
      (clause
        (x_clause
          (x_tag)
          (qdstring))))))
