test/corpus/comments.txt
================================================================================
Hash comments
================================================================================
# This is a comment
objectidentifier testRoot 1.2.3.4
# Another comment

--------------------------------------------------------------------------------

(source_file
  (comment)
  (objectidentifier_definition
    (keyword)
    (bare_word)
    (oid))
  (comment))

================================================================================
Double-slash comments
================================================================================
// This is a C-style comment
objectidentifier testRoot 1.2.3.4
// Another comment

--------------------------------------------------------------------------------

(source_file
  (comment)
  (objectidentifier_definition
    (keyword)
    (bare_word)
    (oid))
  (comment))

================================================================================
Inline comments between definitions
================================================================================
objectidentifier acmeRoot 1.3.6.1.4.1.99999
# Define the attribute type
attributeType ( 1.3.6.1.4.1.99999.1.1
    NAME 'acmeAttr'
    SYNTAX 1.3.6.1.4.1.1466.115.121.1.15 )

--------------------------------------------------------------------------------

(source_file
  (objectidentifier_definition
    (keyword)
    (bare_word)
    (oid))
  (comment)
  (attributetype_definition
    (keyword)
    (definition
      (oid)
      (clause
        (name_clause
          (keyword)
          (qdstring)))
      (clause
        (syntax_clause
          (keyword)
          (syntax_spec
            (oid)))))))
