test/corpus/nameform.txt
================================================================================
nameform with OC and MUST
================================================================================
nameForm ( 1.3.6.1.4.1.99999.8.1
    NAME 'acmeOrgNameForm'
    OC acmeOrganization
    MUST o )

--------------------------------------------------------------------------------

(source_file
  (nameform_definition
    (keyword)
    (definition
      (oid)
      (clause
        (name_clause
          (keyword)
          (qdstring)))
      (clause
        (oc_clause
          (keyword)
          (oid_reference
            (bare_word))))
      (clause
        (must_clause
          (keyword)
          (oid_list
            (oid_item
              (oid_reference
                (bare_word)))))))))

================================================================================
nameform with MAY
================================================================================
nameForm ( 1.3.6.1.4.1.99999.8.2
    NAME 'acmeDeptNameForm'
    OC acmeDepartment
    MUST ou
    MAY ( description $ l ) )

--------------------------------------------------------------------------------

(source_file
  (nameform_definition
    (keyword)
    (definition
      (oid)
      (clause
        (name_clause
          (keyword)
          (qdstring)))
      (clause
        (oc_clause
          (keyword)
          (oid_reference
            (bare_word))))
      (clause
        (must_clause
          (keyword)
          (oid_list
            (oid_item
              (oid_reference
                (bare_word))))))
      (clause
        (may_clause
          (keyword)
          (oid_list
            (oid_item
              (oid_reference
                (bare_word)))
            (oid_item
              (oid_reference
                (bare_word)))))))))
